--- a/frontend/src/features/cart/CartLayout.module.css
+++ b/frontend/src/features/cart/CartLayout.module.css
@@ -38,8 +38,9 @@
 }
 
 .checkout_btn {
+  text-align: center;
   border: none;
-  padding: 1.6rem;
+  padding: 1.2rem;
   font-size: 1.6rem;
   background-color: var(--bg-primary);
   color: var(--text-gray-0);
