--- a/frontend/src/Pages/Profile/ProfilePage.module.css
+++ b/frontend/src/Pages/Profile/ProfilePage.module.css
@@ -1,3 +1,11 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5%;
+}
+
 .container h1 {
   font-size: 24px;
   font-weight: 600;
