--- a/frontend/src/Pages/Orders/OrdersPage.module.css
+++ b/frontend/src/Pages/Orders/OrdersPage.module.css
@@ -3,3 +3,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: var(--bg-primary);
+  margin-bottom: 3.2rem;
+}
