--- a/frontend/src/Pages/Cart/CartPage.module.css
+++ b/frontend/src/Pages/Cart/CartPage.module.css
@@ -3,6 +3,7 @@
   display: inline-block;
   color: var(--text-gray-800);
   transition: all 0.3s;
+  padding: 9.6rem 3.6rem;
 }
 
 .back_button:hover {
