--- a/frontend/src/Pages/Login/LoginPage.module.css
+++ b/frontend/src/Pages/Login/LoginPage.module.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 6.2rem;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
 }
 
 .form_container {
