--- a/frontend/src/Pages/Payment/PaymentPage.module.css
+++ b/frontend/src/Pages/Payment/PaymentPage.module.css
@@ -1,8 +1,10 @@
 .container {
   display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0 2.4rem 6.2rem 2.4rem;
   flex-wrap: wrap;
-  justify-content: center;
+  padding-top: 9.6rem;
 }
 
 .content {
