--- a/frontend/src/Pages/Signup/SignupPage.module.css
+++ b/frontend/src/Pages/Signup/SignupPage.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 6.2rem;
+  height: 100vh;
 }
 
 .form_container {
